05_service_nodeport.yml
apiVersion: v1
kind: Service
metadata:
    name: mhealth-service
    namespace: zipper
spec:
    selector:
        app: mhealth-app
    ports:
      - protocol: TCP
        port: 8082
        targetPort: 8000
        nodePort: 30080
    type: NodePort
