07_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hello-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.org/server-snippets: |
            location /admin {
                deny all;
                return 403 "Go your own way, Stalker!";
            }
spec:
    rules:
      - host: "arch.homework"
        http:
            paths:
              - path: /foo/.*
                pathType: Prefix
                backend:
                    service:
                        name: mhealth-service
                        port:
                            number: 8082
              - path: /otusapp/sadmitriev
                pathType: Prefix
                backend:
                    service:
                        name: mhealth-service
                        port:
                           number: 8082
